--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html data-wf-page="585ad3b98c48d9a2642d5594" data-wf-site="585ad3b98c48d9a2642d5593">
 <head>
   <meta charset="utf-8">
@@ -9,13 +8,27 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/ebook-site.webflow.css" rel="stylesheet" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
+  <script type="text/javascript">
+    WebFont.load({
+      google: {
+        families: ["Nunito:200,200italic,300,300italic,regular,italic,600,600italic,700,700italic,800,800italic,900,900italic"]
+      }
+    });
+  </script>
   <script src="js/modernizr.js" type="text/javascript"></script>
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
   <div class="page-wrapper">
-    <div class="left-side"></div>
+    <div class="left-side">
+      <div class="overlay"></div>
+      <div class="centercontent content-wrapper">
+        <h1 class="chapter-name">Heading</h1>
+        <div class="subtitle">From time management to biling to collaboration, these are tools you need to succeed as a freelancer.</div>
+      </div>
+    </div>
     <div class="right-side"></div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
