--- a/index.html
+++ b/index.html
@@ -22,11 +22,17 @@
 </head>
 <body>
   <div class="page-wrapper">
+    <div></div>
     <div class="left-side">
-      <div class="overlay"></div>
+      <div class="overlay"></div><a class="chapters-link w-button" href="#">View all chapters</a>
+      <a class="w-inline-block" href="index.html"><img class="logo" src="images/logo.png" width="113">
+      </a>
       <div class="centercontent content-wrapper">
-        <h1 class="chapter-name">Heading</h1>
+        <h1 class="chapter-name">Responsive Web Design</h1>
         <div class="subtitle">From time management to biling to collaboration, these are tools you need to succeed as a freelancer.</div>
+        <div><img class="author-image" src="images/12793193.jpeg">
+        </div>
+        <div class="author-name">Maha Matin</div>
       </div>
     </div>
     <div class="right-side"></div>
