--- a/index.html
+++ b/index.html
@@ -22,7 +22,88 @@
 </head>
 <body>
   <div class="page-wrapper">
-    <div></div>
+    <div class="chapter-wrapper"><a class="close" href="#">Close X</a>
+      <div class="content-wrapper">
+        <h4>Chapters</h4>
+      </div>
+      <div class="chapters-subject content-wrapper">
+        <a class="link-chapters w-clearfix w-inline-block" href="#">
+          <div class="chapters-thumbnail color-theory"></div>
+          <div class="chapter-number">Chapter: 1</div>
+          <div class="chapters-names">Color Theory</div>
+        </a>
+      </div>
+      <div class="chapters-subject content-wrapper">
+        <a class="link-chapters w-clearfix w-inline-block" href="#">
+          <div class="chapters-thumbnail typography"></div>
+          <div class="chapter-number">Chapter: 2</div>
+          <div class="chapters-names">Typography and Font</div>
+        </a>
+      </div>
+      <div class="chapters-subject content-wrapper">
+        <a class="link-chapters w-clearfix w-inline-block" href="#">
+          <div class="chapters-thumbnail graphic-design"></div>
+          <div class="chapter-number">Chapter: 3</div>
+          <div class="chapters-names">Graphic Design</div>
+        </a>
+      </div>
+      <div class="chapters-subject content-wrapper">
+        <a class="link-chapters w-clearfix w-inline-block" href="#">
+          <div class="chapters-thumbnail layout"></div>
+          <div class="chapter-number">Chapter: 4</div>
+          <div class="chapters-names">Layout Concept</div>
+        </a>
+      </div>
+      <div class="chapters-subject content-wrapper">
+        <a class="link-chapters w-clearfix w-inline-block" href="#">
+          <div class="chapters-thumbnail ui"></div>
+          <div class="chapter-number">Chapter: 5</div>
+          <div class="chapters-names">UI Designer &amp; Tools</div>
+        </a>
+      </div>
+      <div class="chapters-subject content-wrapper">
+        <a class="link-chapters w-clearfix w-inline-block" href="#">
+          <div class="chapters-thumbnail ux"></div>
+          <div class="chapter-number">Chapter: 6</div>
+          <div class="chapters-names">UX Designer &amp; Tools</div>
+        </a>
+      </div>
+      <div class="chapters-subject content-wrapper">
+        <a class="link-chapters w-clearfix w-inline-block" href="#">
+          <div class="chapters-thumbnail ui-ux"></div>
+          <div class="chapter-number">Chapter: 7</div>
+          <div class="chapters-names">UI &amp; UX Component</div>
+        </a>
+      </div>
+      <div class="chapters-subject content-wrapper">
+        <a class="link-chapters w-clearfix w-inline-block" href="#">
+          <div class="chapters-thumbnail sitemap"></div>
+          <div class="chapter-number">Chapter: 8</div>
+          <div class="chapters-names">Clean Sitemap</div>
+        </a>
+      </div>
+      <div class="chapters-subject content-wrapper">
+        <a class="link-chapters w-clearfix w-inline-block" href="#">
+          <div class="chapters-thumbnail front-end"></div>
+          <div class="chapter-number">Chapter: 9</div>
+          <div class="chapters-names">Front-End Developer</div>
+        </a>
+      </div>
+      <div class="chapters-subject content-wrapper">
+        <a class="link-chapters w-clearfix w-inline-block" href="#">
+          <div class="chapters-thumbnail freelance"></div>
+          <div class="chapter-number">Chapter: 10</div>
+          <div class="chapters-names">Freelance Developer</div>
+        </a>
+      </div>
+      <div class="chapters-subject content-wrapper">
+        <a class="link-chapters w-clearfix w-inline-block" href="#">
+          <div class="chapters-thumbnail marketing"></div>
+          <div class="chapter-number">Chapter: 11</div>
+          <div class="chapters-names">Web Developer Marketing</div>
+        </a>
+      </div>
+    </div>
     <div class="left-side">
       <div class="overlay"></div><a class="chapters-link w-button" href="#">View all chapters</a>
       <a class="w-inline-block" href="index.html"><img class="logo" src="images/logo.png" width="113">
