--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <div class="page-wrapper">
-    <div class="chapter-wrapper"><a class="close" href="#">Close X</a>
+    <div class="chapter-wrapper" data-ix="chapter-wrapper"><a class="close" href="#">Close X</a>
       <div class="content-wrapper">
         <h4>Chapters</h4>
       </div>
@@ -105,7 +105,7 @@
       </div>
     </div>
     <div class="left-side">
-      <div class="overlay"></div><a class="chapters-link w-button" href="#">View all chapters</a>
+      <div class="overlay"></div><a class="chapters-link w-button" data-ix="chapter-slide" href="#">View all chapters</a>
       <a class="w-inline-block" href="index.html"><img class="logo" src="images/logo.png" width="113">
       </a>
       <div class="centercontent content-wrapper">
