Adding click trigger to close link
Interaction will be activate by clicking close link and it moves
chapter wrapper out of screen

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <div class="page-wrapper">
-    <div class="chapter-wrapper" data-ix="chapter-wrapper"><a class="close" href="#">Close X</a>
+    <div class="chapter-wrapper"><a class="close" data-ix="close" href="#">Close X</a>
       <div class="content-wrapper">
         <h4>Chapters</h4>
       </div>
@@ -106,7 +106,7 @@
     </div>
     <div class="left-side">
       <div class="overlay"></div><a class="chapters-link w-button" data-ix="chapter-slide" href="#">View all chapters</a>
-      <a class="w-inline-block" href="index.html"><img class="logo" src="images/logo.png" width="113">
+      <a class="w-inline-block" data-ix="chapter-slide" href="index.html"><img class="logo" src="images/logo.png" width="113">
       </a>
       <div class="centercontent content-wrapper">
         <h1 class="chapter-name">Responsive Web Design</h1>
