Interaction between chapter wrapper and chapters

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
-  <div class="page-wrapper" data-ix="chapter-12">
-    <div class="chapter-wrapper" data-ix="chapter-12"><a class="close" data-ix="close" href="#">Close X</a>
+  <div class="page-wrapper">
+    <div class="chapter-wrapper"><a class="close" data-ix="close" href="#">Close X</a>
       <div class="content-wrapper">
         <h4>Chapters</h4>
       </div>
@@ -116,7 +116,7 @@
       <a class="w-inline-block" data-ix="chapter-slide" href="index.html"><img class="logo" src="images/logo.png" width="113">
       </a>
       <div class="centercontent content-wrapper">
-        <h1 class="chapter-name">Responsive Web Design</h1>
+        <h1 class="chapter-name">Web Design 101</h1>
         <div class="subtitle">From time management to biling to collaboration, these are tools you need to succeed as a freelancer.</div>
         <div><img class="author-image" src="images/12793193.jpeg">
         </div>
@@ -219,7 +219,7 @@
         </div>
       </div>
     </div>
-    <div class="ch4">
+    <div class="ch4" data-ix="chapter-3">
       <div class="content-wrapper">
         <div class="top-content w-clearfix"><a class="top-link">Web Design 101</a><a class="top-link">Chapter: 4</a><a class="amazon top-link" href="https://www.amazon.com/books-used-books-textbooks/b?ie=UTF8&amp;node=283155" target="_blank">Try Amazon</a>
         </div>
@@ -443,7 +443,7 @@
         </div>
       </div>
     </div>
-    <div class="ch11" data-ix="chapter-1">
+    <div class="ch11" data-ix="chapter-11">
       <div class="content-wrapper">
         <div class="top-content w-clearfix"><a class="top-link">Web Design 101</a><a class="top-link">Chapter: 11</a><a class="amazon top-link" href="https://www.amazon.com/books-used-books-textbooks/b?ie=UTF8&amp;node=283155" target="_blank">Try Amazon</a>
         </div>
@@ -475,7 +475,7 @@
         </div>
       </div>
     </div>
-    <div class="ch12">
+    <div class="ch12" data-ix="chapter-12">
       <div class="content-wrapper">
         <div class="top-content w-clearfix"><a class="top-link">Web Design 101</a><a class="top-link">Chapter: 12</a><a class="amazon top-link" href="https://www.amazon.com/books-used-books-textbooks/b?ie=UTF8&amp;node=283155" target="_blank">Try Amazon</a>
         </div>
