--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="content-wrapper">
         <h4>Chapters</h4>
       </div>
-      <div class="chapters-subject content-wrapper" data-ix="chapter-1">
+      <div class="chapters-subject content-wrapper">
         <a class="link-chapters-2 w-clearfix w-inline-block" data-ix="chapter-1" href="#">
           <div class="chapters-thumbnail color-theory"></div>
           <div class="chapter-number">Chapter: 1</div>
@@ -96,7 +96,7 @@
           <div class="chapters-names">Freelance Developer</div>
         </a>
       </div>
-      <div class="chapters-subject content-wrapper" data-ix="chapter-12">
+      <div class="chapters-subject content-wrapper">
         <a class="link-ch11 w-clearfix w-inline-block" data-ix="chapter-11" href="#">
           <div class="chapters-thumbnail marketing"></div>
           <div class="chapter-number">Chapter: 11</div>
@@ -1217,7 +1217,7 @@
         </div>
       </div>
     </div>
-    <div class="ch11" data-ix="chapter-11">
+    <div class="ch11">
       <div class="content-wrapper">
         <div class="top-content w-clearfix"><a class="top-link">Web Design 101</a><a class="top-link">Chapter: 11</a><a class="amazon top-link" href="https://www.amazon.com/books-used-books-textbooks/b?ie=UTF8&amp;node=283155" target="_blank">Try Amazon</a>
         </div>
@@ -1322,7 +1322,7 @@
         </div>
       </div>
     </div>
-    <div class="ch12" data-ix="chapter-12">
+    <div class="ch12">
       <div class="content-wrapper">
         <div class="top-content w-clearfix"><a class="top-link">Web Design 101</a><a class="top-link">Chapter: 12</a><a class="amazon top-link" href="https://www.amazon.com/books-used-books-textbooks/b?ie=UTF8&amp;node=283155" target="_blank">Try Amazon</a>
         </div>
