--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com -->
-<!--  Last Published: Tue Mar 07 2017 01:16:08 GMT+0000 (UTC)  -->
+<!--  Last Published: Tue Mar 07 2017 01:25:01 GMT+0000 (UTC)  -->
 <html data-wf-page="585ad3b98c48d9a2642d5594" data-wf-site="585ad3b98c48d9a2642d5593">
 <head>
   <meta charset="utf-8">
@@ -115,8 +115,7 @@
     </div>
     <div class="left-side">
       <div class="overlay"></div><a class="chapters-link w-button" data-ix="chapter-slide" href="#">View all chapters</a>
-      <a class="w-inline-block" data-ix="chapter-slide" href="index.html"><img class="logo" src="images/logo.png" width="113">
-      </a>
+      <a class="w-inline-block" data-ix="chapter-slide" href="index.html"></a>
       <div class="centercontent content-wrapper">
         <h1 class="chapter-name">Web Design 101</h1>
         <div class="subtitle">From time management to biling to collaboration, these are tools you need to succeed as a freelancer.</div>
